Generally fixes project card spacing bug
There's still a slight off-set when scrolling left after initially scrolling right; but the amount is now marginal. Gets the seal of "good enough".

--- a/ncoover-website/src/components/portfolio/project-card/ProjectCard.module.css
+++ b/ncoover-website/src/components/portfolio/project-card/ProjectCard.module.css
@@ -68,6 +68,7 @@
 
 .projectCard {
 	box-sizing: border-box;
+	margin: 0 0.5rem 0 0.5rem;
 	/* margin: 3px; */
 	transition:
 		transform 0.3s ease,
@@ -79,7 +80,6 @@
 .selected {
 	transform: scale(1.05);
 	outline: 3px solid rgb(255, 255, 255);
-	margin: 0 2rem 0 0;
 	border-radius: 8px;
 	z-index: 2;
 }
